<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/fragment_title"
        android:id="@+id/currentTemp"
        android:text="@string/temp_value_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/fragment_value_text"
        android:id="@+id/temperature_text"
        android:textColor="@color/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTemp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_text">

        <TextView
            style="@style/fragment_measured_text"
            android:text="@string/temp_date_title" />

        <TextView
            style="@style/fragment_measured_text"
            android:id="@+id/temperature_date"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
             />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBarTempValue"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/temperature"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTemp" />

    <TextView
        style="@style/fragment_subtitle"
        android:id="@+id/graphs_text_view"
        android:text="@string/graphs_text_view"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        style="@style/fragment_date_text"
        android:id="@+id/start_date_temp"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_temperature"
        app:layout_constraintEnd_toStartOf="@+id/changePeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changePeriod"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_period"
        android:textColor="@color/temperature"
        app:layout_constraintEnd_toStartOf="@id/end_date_temp"
        app:layout_constraintStart_toEndOf="@+id/start_date_temp"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_temperature"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/temperature"
        app:strokeWidth="2dp" />

    <TextView
        style="@style/fragment_date_text"
        android:id="@+id/end_date_temp"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/changePeriod"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view" />


    <ListView
        android:id="@+id/list_graphs_temperature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePeriod">

    </ListView>

    <ProgressBar
        android:id="@+id/progressBarTempGraphs"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/list_graphs_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_graphs_temperature" />


</androidx.constraintlayout.widget.ConstraintLayout>