<resources>
    <string name="app_name">WineCellarApp</string>
    <string name="menu_item">MenuItem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air">Air quality</string>
    <string name="notification">Notifications</string>
    <string name="home">Home</string>
    <string name="home_text">Choose the sensors which values you want to see</string>
    <string name="temp_title">Temperature</string>
    <string name="temp_value_title">Last measured temperature</string>
    <string name="temp_date_title">Measured on</string>
    <string name="temp_time_title">at</string>
    <string name="timeFormat">hh:mm:ss</string>
    <string name="dateFormat">dd-MM-yyyy</string>
    <string name="period" formatted="true">Start date: %s End date: %s</string>
    <string name="start_date" formatted="true">Start date: \n %s</string>
    <string name="end_date" formatted="true">End date: %s End date: %s</string>
    <string name="graphs_text_view">Graphs from time period</string>
    <string name="change_period">Change</string>

    <!--LOGIN-->
    <string name="action_log_out">Log Out</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_create_account">Create account</string>
...
